samples/_failures_safe/1760888119_8d694e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4033e5e0.c: In function ‘main’:
./samples/SAFE/__tmp_4033e5e0.c:136:33: error: missing terminating " character
  136 |                 fprintf(stderr, "
      |                                 ^
./samples/SAFE/__tmp_4033e5e0.c:136:17: error: expected expression at end of input
  136 |                 fprintf(stderr, "
      |                 ^~~~~~~
./samples/SAFE/__tmp_4033e5e0.c:136:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4033e5e0.c:136:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4033e5e0.c:136:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4033e5e0.c:136:17: error: expected declaration or statement at end of input
